add_subdirectory(boxFilterTest)
add_subdirectory(extremaTest)
add_subdirectory(filterTest)
add_subdirectory(fp16Test)
add_subdirectory(gaussTest)
add_subdirectory(guidedFilterTest)
add_subdirectory(interpolate)
add_subdirectory(mappedMemoryTest)
add_subdirectory(op3x3Test)
add_subdirectory(stereoTest)
add_subdirectory(subsampleTest)
add_subdirectory(testIIDCcuda)
add_subdirectory(transposeTest)
add_subdirectory(warpTest)
