add_subdirectory(boxFilterTest)
add_subdirectory(boxFilterTest2)
add_subdirectory(cudaStereoTest)
add_subdirectory(filterTest)
add_subdirectory(fp16Test)
add_subdirectory(gaussTest)
add_subdirectory(guidedFilterTest)
add_subdirectory(interpolate)
add_subdirectory(mappedMemoryTest)
add_subdirectory(nppGauss)
add_subdirectory(op3x3Test)
add_subdirectory(subsampleTest)
add_subdirectory(testIIDCcuda)
add_subdirectory(transposeTest)
add_subdirectory(warpTest)
add_subdirectory(eigen33Test)
